--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:style": "stylelint \"**/*.{css,scss}\" --fix",
+    "lint:es": "eslint . --fix"
   }
 }
